--- a/src/movie.css
+++ b/src/movie.css
@@ -119,8 +119,7 @@ background-color: rgba(240, 1, 1, 0.249);
 }
 
 .home {
-    margin-left: 1200px;
-    float: right;
+    margin-right: 30px;
     color: wheat;
     text-decoration: none;
 }
@@ -149,4 +148,8 @@ background: linear-gradient(90deg, rgba(2,0,36,0.5164081990217962) 0%, rgba(35,1
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
+}
+
+.hero-container {
+    text-align: center;
 }
