--- a/src/movie.css
+++ b/src/movie.css
@@ -1,63 +1,64 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: arial;
-    font-weight: 200;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 200;
 }
 
 body {
-    background-color: #202020;
+  background-color: #202020;
 }
 
 .header-h5 {
-    color: #fcf9be;
-    text-align: center;
-    margin-top: 10px;
-    font-size: 1.8rem;
+  color: #fcf9be;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 1.8rem;
 }
 
 .h5 {
-    color: #fcf9be;
-    text-align: center;
+  color: #fcf9be;
+  text-align: center;
 }
 
 .p {
-    color: #fcf9be;	
-    margin-top: 8px;
-    font-size: .9rem;
+  color: #fcf9be;
+  margin-top: 8px;
+  font-size: 0.9rem;
 }
 
 .movie {
-    margin-top: 15px;
-    display: grid;
-    place-items: center;    
-    padding: 10px;
-    transition: transform .2s;
-    cursor: pointer;
+  margin-top: 15px;
+  display: grid;
+  place-items: center;
+  padding: 10px;
+  transition: transform 0.2s;
+  cursor: pointer;
 }
 
 .movie:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .img:hover {
-    box-shadow: 0 0 25px rgb(33, 192, 19);
-} 
+  box-shadow: 0 0 25px rgb(33, 192, 19);
+}
 
 .header {
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .not-found {
-    margin: auto;
-    margin-top: 3rem;
-    font-size: 1.2rem;
+  margin: auto;
+  margin-top: 3rem;
+  font-size: 1.2rem;
 }
 
 /* .backdrop {
@@ -73,65 +74,211 @@ body {
 } */
 
 .img-carousel {
-    aspect-ratio: 16/9;
-    max-height: 350px;
-    object-fit: cover;
-
+  aspect-ratio: 16/9;
+  max-height: 350px;
+  object-fit: cover;
 }
 
 .hackflix-navbar {
-    color: green;
+  color: green;
 }
 
 .home {
-    margin-right: 30px;
-    color: wheat;
-    text-decoration: none;
+  margin-right: 30px;
+  color: wheat;
+  text-decoration: none;
 }
 
 .nav-header {
-    background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,0.5164081990217962) 0%, rgba(35,156,61,0.77) 69%);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 0.5164081990217962) 0%,
+    rgba(35, 156, 61, 0.77) 69%
+  );
 }
 
 .container-details {
-    padding: 20px;
+  padding: 20px;
 }
 
 .detail-title {
-    color: whitesmoke;
-    margin-bottom: 50px;
+  color: whitesmoke;
+  margin-bottom: 50px;
 }
 
 .detail-description {
-    margin-top: 60px;
-    margin-bottom: 70px;
-    color: #f5f5f5;
+  margin-top: 60px;
+  margin-bottom: 70px;
+  color: #f5f5f5;
 }
 
 .middle-div {
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .hero-container {
-    text-align: center;
+  text-align: center;
 }
 
 .spinner {
-    margin-top: 30px;
-    text-align: center;
+  margin-top: 30px;
+  text-align: center;
 }
 
 .noMatch {
-    width: 50%;
-    margin: auto;
-    margin-top: 10%;
-    text-align: center;
+  width: 50%;
+  margin: auto;
+  margin-top: 10%;
+  text-align: center;
 }
 
 .btn-noMatch {
-    margin-top: 20px;
-    text-align: center;    
+  margin-top: 20px;
+  text-align: center;
 }
+
+.about-title {
+  width: 72%;
+  align-items: center;
+  color: #fcf9be;
+}
+
+.h2-about {
+  width: 50%;
+  margin: auto;
+  text-align: center;
+  margin-top: 50px;
+  font-size: 2.5rem;
+  -webkit-animation: puff-in-top 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s both;
+  animation: puff-in-top 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s both;
+}
+
+@-webkit-keyframes puff-in-top {
+  0% {
+    -webkit-transform: scale(2);
+    transform: scale(2);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(4px);
+    filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes puff-in-top {
+  0% {
+    -webkit-transform: scale(2);
+    transform: scale(2);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(4px);
+    filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+
+.h3-about {
+  width: 90%;
+  text-align: center;
+  margin: auto;
+  padding: 5px;
+  font-size: 2.5rem;
+  margin-top: 90px;
+  font-weight: 700;
+  -webkit-animation: puff-in-top 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s both;
+  animation: puff-in-top 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s both;
+}
+
+.img-about {
+  max-height: 590px;
+}
+
+.label-contact {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #fcf9be;
+}
+
+.label-search {
+    color: #fcf9be;
+    padding: 10px;
+    font-size: 1.3rem;
+}
+
+.contact-form {
+    border-radius: 10px;
+    width: 60%;
+    margin: auto;
+    padding: 20px;
+    background-color: #24303c;
+    box-shadow: 7px 13px 37px #000;
+}
+
+.h1-contact {
+    color: green;
+    width: 20%;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 50px;
+    margin-top: 15px;
+}
+
+.btn-contact {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.input-contact {
+    background-color: #5f7c9768;
+    border: 1px solid green;
+}
+
+.form-rating {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
+    justify-content: baseline;
+}
+
+.input-search {
+    margin-top: 13px;
+    border-radius: 15px;
+    height: 50%;
+}
+
+.label-search {
+    text-align: center;
+}
+
+.btn-search {
+    margin: 13px;
+    height: 50%;
+}
+
+/* .main-noMatch {
+    width: 100%;
+    background-image: url("https://images.unsplash.com/photo-1566320238645-032c8c55845a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+} */
