--- a/src/movie.css
+++ b/src/movie.css
@@ -61,18 +61,6 @@ body {
   font-size: 1.2rem;
 }
 
-/* .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 99;
-    backdrop-filter: blur(10px);
-    transition: opacity 0.3s ease;
-} */
-
 .img-carousel {
   aspect-ratio: 16/9;
   max-height: 350px;
@@ -87,6 +75,10 @@ body {
   margin-right: 30px;
   color: wheat;
   text-decoration: none;
+}
+
+.home:hover {
+  color: rgb(17, 162, 17);
 }
 
 .nav-header {
