--- a/src/movie.css
+++ b/src/movie.css
@@ -11,6 +11,38 @@ body {
   background-color: #202020;
 }
 
+.details-movie {
+  border: none;
+  background-color: #202020;
+}
+
+.big-container {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-bottom-right-radius: 0px;
+}
+
+.card h2 {
+  text-transform: uppercase;
+}
+
+.card p {
+  line-height: 1.6rem;
+}
+
+@media (min-width: 768px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .header-h5 {
   color: #fcf9be;
   text-align: center;
@@ -38,9 +70,9 @@ body {
   cursor: pointer;
 }
 
-/* .movie:hover {
+.movie:hover {
   transform: scale(1.1);
-} */
+}
 
 .img {
   cursor: pointer;
