--- a/src/movie.css
+++ b/src/movie.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #202020;
+  background-color: #111;
 }
 
 .details-movie {
@@ -99,6 +99,16 @@ body {
   object-fit: cover;
 }
 
+.carousel-fade {
+  position: absolute;
+  top: 40vh;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
+}
+
 .hackflix-navbar {
   color: green;
 }
@@ -113,14 +123,14 @@ body {
   color: rgb(45, 197, 45);
 }
 
-.nav-header {
+/* .nav-header {
   background: rgb(2, 0, 36);
   background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 0.5164081990217962) 0%,
     rgba(35, 156, 61, 0.77) 69%
   );
-}
+} */
 
 .container-details {
   padding: 20px;
@@ -281,7 +291,7 @@ body {
 }
 
 .form-rating {
-  margin-top: 10px;
+  margin-top: 7rem;
   display: flex;
   justify-content: space-around;
   justify-content: baseline;
@@ -368,12 +378,27 @@ body {
   position: relative;
 }
 
-/* .hero-image {
-  background-image: linear-gradient(
-      180deg,
-      rgba(255, 255, 255, 0) 70%,
-      rgba(255, 255, 255, 0.278) 89%,
-      rgba(255, 255, 255, 0.803) 96%,
-      rgb(255, 255, 255) 100%
-    ),
-    url("/public/img/hero_image_2.webp"); */
+/* Navbar  */
+
+.navbar-static {
+  width: 100%;
+  position: fixed !important;
+  top: 0px;
+  z-index: 100;
+  border: 1px solid red
+  
+}
+
+.navbar-dynamic {
+  position: sticky !important;
+  top: 0px;
+  z-index: 100;
+  background-color: #111;
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 0.5164081990217962) 0%,
+    rgba(35, 156, 61, 0.77) 69%)
+}
