--- a/src/movie.css
+++ b/src/movie.css
@@ -17,6 +17,7 @@ body {
 }
 
 .big-container {
+  margin-top: 3rem;
   padding-top: 1rem;
   padding-bottom: 2rem;
 }
@@ -291,7 +292,7 @@ body {
 }
 
 .form-rating {
-  margin-top: 7rem;
+  margin-top: 4rem;
   display: flex;
   justify-content: space-around;
   justify-content: baseline;
@@ -382,15 +383,14 @@ body {
 
 .navbar-static {
   width: 100%;
-  position: fixed !important;
+  position: fixed;
   top: 0px;
   z-index: 100;
-  border: 1px solid red
   
 }
 
 .navbar-dynamic {
-  position: sticky !important;
+  position: sticky;
   top: 0px;
   z-index: 100;
   background-color: #111;
