--- a/src/movie.css
+++ b/src/movie.css
@@ -2,8 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 200;
 }
 
@@ -95,19 +94,32 @@ body {
 
 .img-carousel {
   aspect-ratio: 16/9;
-  max-height: 350px;
+  max-height: 680px;
   object-fit: cover;
 }
 
 .carousel-fade {
   position: absolute;
-  top: 40vh;
+  top: 55vh;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 99;
   background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
 }
+
+@media (max-width: 680px) {
+  .carousel-fade {
+    position: absolute;
+    top: 25vh;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
+  }
+}
+
 
 .hackflix-navbar {
   color: green;
@@ -121,24 +133,6 @@ body {
 
 .home:hover {
   color: rgb(45, 197, 45);
-}
-
-/* .nav-header {
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 0.5164081990217962) 0%,
-    rgba(35, 156, 61, 0.77) 69%
-  );
-} */
-
-.container-details {
-  padding: 20px;
-}
-
-.detail-title {
-  color: whitesmoke;
-  margin-bottom: 50px;
 }
 
 .detail-description {
@@ -285,16 +279,16 @@ body {
   text-align: center;
 }
 
-.input-contact {
-  background-color: #5f7c9768;
-  border: 1px solid green;
-}
-
 .form-rating {
   margin-top: 4rem;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   justify-content: baseline;
+}
+
+.css-1c2i806-MuiFormLabel-root-MuiInputLabel-root {
+  color: #f5f5f5 !important;
 }
 
 .form-control-contact {
@@ -342,10 +336,6 @@ body {
 
 .back-home-contact:hover {
   color: green !important;
-}
-
-.btn-send-contact {
-  padding: 0 !important;
 }
 
 .input-search {
@@ -443,4 +433,105 @@ body {
     90deg,
     rgba(2, 0, 36, 0.5164081990217962) 0%,
     rgba(35, 156, 61, 0.77) 69%)
+}
+
+/* Footer style */
+
+.footer {
+  margin-top: 5.5rem;
+  font-size: 1.1rem;
+  background: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61), #111 0%,
+    rgba(35, 156, 61, 0.77) 69%);
+}
+
+.footer input {
+  font-weight: 300;
+}
+
+.footer button {
+  font-weight: 300;
+}
+
+.footer-container {
+  width: 90%;
+  padding: 3rem 0rem 3rem 0rem;
+}
+
+.footer-list {
+  font-size: 0.9rem;
+  color: rgba(255, 255, 255, 0.791);
+}
+
+.footer-list li {
+  margin-bottom: 0.5rem;
+  font-weight: 300;
+}
+
+/* .footer-cta {
+  background-color: green !important;
+} */
+
+.footer-cta:hover {
+  background-color: #ca1717ad !important;
+  color: #f5f5f5;
+}
+
+.footer-cta {
+  background-color: #111111b3;
+}
+
+.footer-text {
+  color: rgba(255, 255, 255, 0.791);;
+}
+
+/* about project  */
+
+.container-about {
+  margin-top: 7rem;
+}
+
+.icon-about {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: -30px;
+  left: 80%;
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-team {
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  border: solid 2px var(--brand-ligth-brown);
+}
+
+.icons-team i {
+  margin-left: 10px;
+  font-size: 30px;
+  transition: 0.3s;
+}
+
+@media (max-width: 576px) {
+  .card-body-foto {
+    width: 90%;
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 360px) {
+  .card-body-foto {
+    width: 100%;
+  }
+}
+
+.btn-send {
+  border-radius: 20px;
 }
