--- a/src/movie.css
+++ b/src/movie.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 200;
 }
 
@@ -103,7 +104,6 @@ body {
   }
 }
 
-
 .hackflix-navbar {
   color: green;
 }
@@ -161,7 +161,6 @@ body {
   margin-bottom: 10px;
   color: #fcf9be;
 }
-
 
 .label-search {
   color: #fcf9be;
@@ -223,19 +222,17 @@ body {
 }
 
 @media (max-width: 972px) {
-#container-img {
-  padding: 2rem;
-} 
+  #container-img {
+    padding: 2rem;
+  }
 
-.input-form {
-  color: wheat !important;
-}
-  
+  .input-form {
+    color: wheat !important;
+  }
 }
 
 .navbar-toggler {
-  color: wheat !important;
-  background-color: rgba(255, 255, 255, 0.486);
+  border: none;
 }
 
 .css-aqpgxn-MuiFormLabel-root-MuiInputLabel-root {
@@ -345,14 +342,7 @@ body {
 
 /* Navbar  */
 
-.navbar-static {
-  width: 100%;
-  position: fixed;
-  top: 0px;
-  z-index: 100; 
-}
-
-.navbar-dynamic {
+.navbar-header {
   position: sticky;
   top: 0px;
   z-index: 100;
@@ -363,7 +353,8 @@ body {
   background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 0.5164081990217962) 0%,
-    rgba(35, 156, 61, 0.77) 69%)
+    rgba(35, 156, 61, 0.77) 69%
+  );
 }
 
 /* Footer style */
@@ -374,8 +365,10 @@ body {
   background: linear-gradient(
     180deg,
     transparent,
-    rgba(37, 37, 37, 0.61), #111 0%,
-    rgba(35, 156, 61, 0.77) 69%);
+    rgba(37, 37, 37, 0.61),
+    #111 0%,
+    rgba(35, 156, 61, 0.77) 69%
+  );
 }
 
 .footer input {
@@ -415,7 +408,7 @@ body {
 }
 
 .footer-text {
-  color: rgba(255, 255, 255, 0.791);;
+  color: rgba(255, 255, 255, 0.791);
 }
 
 /* about project  */
@@ -463,7 +456,7 @@ body {
   }
 }
 
-.card-description-details{
+.card-description-details {
   padding-top: 2rem !important;
 }
 
@@ -473,7 +466,6 @@ body {
 
 @media (max-width: 576px) {
   .card-description-details {
-
     width: 100% !important;
   }
 }
